<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity5">

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="384dp"
        android:layout_height="856dp"
        app:srcCompat="@drawable/map"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="222dp"
        tools:layout_editor_absoluteY="-20dp" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="196dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView18"
        app:srcCompat="@drawable/car" />

    <LinearLayout
        android:layout_width="222dp"
        android:layout_height="631dp"
        android:background="#282C40"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/imageView18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

        <LinearLayout
            android:id="@+id/itemHistory"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView24"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="25dp"
                android:layout_weight="1"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/symbol_76__2" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/menuItem1"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/itemSettings"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView25"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="25dp"
                android:layout_weight="1"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/symbol_78__4" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/menuItem2"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#2C3043"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/imageView18"
        app:layout_constraintStart_toStartOf="@+id/imageView18"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnknownId">

        <ImageView
            android:id="@+id/imageView22"
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/avatar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="bottom"
                android:textColor="@color/white"
                android:text="@string/ex_name"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:textColor="@color/white"
                android:layout_height="match_parent"
                android:text="@string/ex_city" />
        </LinearLayout>

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="115dp"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/icons8_menu_filled_24" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>